# voxel_point_collision_detection

./: .gitignore  Prompts.md  README.md  conda.yaml  pyproject.toml  requirements.in  requirements.txt
admin/: README.md
doc/: Sagardia_PhD_Chapter3_Summary.md
notebooks/: algorithms_tests.ipynb  numpy_tests.ipynb  open3d_tests.ipynb  trimesh_tests.ipynb  usage_examples.ipynb
python/: __init__.py  collision_detection.py  generate_pointshell.py  generate_voxelmap.py  mesh.py
src/: pointshell.py  proximity_query.py  viewer.py  voxelmap.py
tests/: conftest.py  test_collision_detection.py  test_generate_pointshell.py  test_generate_voxelmap.py  test_mesh.py  test_pointshell.py  test_proximity_query.py  test_viewer.py  test_voxelmap.py
