[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxel-point-collision-detection"
version = "0.1.0"
description = "Python reimplementation of a voxelmap-pointshell proximity and collision framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["collision-detection", "voxelmap", "pointshell", "numpy", "trimesh"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26,<3",
  "trimesh>=4.4,<5",
  "scipy>=1.14,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "flake8>=7,<8",
  "pytype>=2024.10.11",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
